# noxim

./: .gitignore  CMakeLists.txt  setup.sh
config_examples/: default_config.yaml  mesh_10x10.yaml  mesh_10x10_interliving.yaml  mesh_10x18.yaml  mesh_10x18_interliving.yaml  mesh_10x6.yaml  mesh_10x6_interliving.yaml  mesh_14x10_interliving.yaml  mesh_14x12_interliving.yaml  mesh_14x14_interliving.yaml  mesh_18x10.yaml  mesh_18x10_interliving.yaml  mesh_18x6.yaml  mesh_18x6_interliving.yaml  mesh_4x4_interleaving.yaml
scripts/: excel_agent.py  latency_model.py  latency_stat.ipynb  latency_stat.py
sim/: power.yaml  run_mesh.sh  run_mesh_10x10_collision_mitigation_conf_study.sh  run_mesh_10x10_collision_mitigation_paper_study.sh  run_mesh_18x10_perfect_routing_dor.sh  run_mesh_18x10_perfect_routing_xy.sh  run_mesh_18x10_quadrant.sh  run_mesh_18x10_task_3804_dor.sh  run_mesh_18x10_task_3804_mdor.sh  run_mesh_24x10_task_3804_piramide.sh  run_mesh_24x10_task_3804_stair.sh  run_mesh_burst.sh  run_mesh_burst_14x14.sh  run_mesh_burst_14x14_12eu_4mc_dor.sh  run_mesh_burst_14x14_12eu_4mc_mdor.sh  run_mesh_burst_14x14_12eu_8mc_dor.sh  run_mesh_burst_14x14_12eu_8mc_mdor.sh  run_mesh_burst_14x14_dor.sh  run_mesh_burst_14x14_mdor.sh  run_mesh_burst_16_18x10_12eu_4mc_dor.sh  run_mesh_burst_16_18x10_12eu_4mc_dor_16ps.sh  run_mesh_burst_16_18x10_12eu_4mc_dor_1ps.sh  run_mesh_burst_16_18x10_12eu_4mc_dor_2ps.sh  run_mesh_burst_16_18x10_12eu_4mc_dor_4ps.sh  run_mesh_burst_16_18x10_12eu_4mc_dor_8ps.sh  run_mesh_burst_18x10.sh  run_mesh_burst_18x10_12eu_4mc_dor.sh  (+49 more)
src/: Buffer.cpp  Hub.cpp  (+40 more)
(+38 files in other folders)
